Documentation Auto configuration